// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Alert: Alerts related to compliance checks and assessments.
Project: Represents a security compliance project.
Assessment: Stores assessment results for controls.
Control: Defines security controls within projects.
ComplianceRequirement: Stores compliance requirements referenced by controls.
Incident: Records security incidents associated with a project.
Log: Logs related to security events of projects.
Provider: Represents security service providers.
Risk: Captures identified risks for controls.
Threat: Details potential threats to projects.
User: Stores user account information.
Vulnerability: Identifies vulnerabilities in projects.
'''
}

Table Alert {
    id INTEGER [primary key]
    project_id INTEGER 
    message VARCHAR 
    severity_level VARCHAR 
    triggered_at DATETIME 
    }

Table Project {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    start_date DATE 
    end_date DATE 
    }

Table Assessment {
    id INTEGER [primary key]
    control_id INTEGER 
    date_assessed DATETIME 
    result VARCHAR 
    comments VARCHAR 
    }

Table Control {
    id INTEGER [primary key]
    project_id INTEGER 
    name VARCHAR 
    description VARCHAR 
    implementation_status VARCHAR 
    }

Table ComplianceRequirement {
    id INTEGER [primary key]
    requirement_text VARCHAR 
    regulation_source VARCHAR 
    }

Table Incident {
    id INTEGER [primary key]
    project_id INTEGER 
    description VARCHAR 
    incident_date DATETIME 
    resolution_status VARCHAR 
    }

Table Log {
    id INTEGER [primary key]
    project_id INTEGER 
    event_details VARCHAR 
    logged_at DATETIME 
    }

Table Provider {
    id INTEGER [primary key]
    name VARCHAR 
    contact_info VARCHAR 
    service_description VARCHAR 
    }

Table Risk {
    id INTEGER [primary key]
    control_id INTEGER 
    description VARCHAR 
    likelihood VARCHAR 
    impact VARCHAR 
    mitigation_strategy VARCHAR 
    }

Table Threat {
    id INTEGER [primary key]
    project_id INTEGER 
    description VARCHAR 
    threat_level VARCHAR 
    }

Table User {
    id INTEGER [primary key]
    username VARCHAR 
    email VARCHAR 
    password VARCHAR 
    created_at DATETIME 
    }

Table Vulnerability {
    id INTEGER [primary key]
    project_id INTEGER 
    description VARCHAR 
    severity VARCHAR 
    remediation_plan VARCHAR 
    }



// Relationships
    Ref: Alert.(project_id) < Project.(id)
    Ref: Assessment.(control_id) < Control.(id)
    Ref: Control.(project_id) < Project.(id)
    Ref: Incident.(project_id) < Project.(id)
    Ref: Log.(project_id) < Project.(id)
    Ref: Risk.(control_id) < Control.(id)
    Ref: Threat.(project_id) < Project.(id)
    Ref: Vulnerability.(project_id) < Project.(id)
